# 3dsCustomInstaller

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  default.nix  flake.nix  gui_ctk.py  motor_backend.py  package.nix  pyproject.toml
.github/workflows/: build-finalize.yml
custominstall/: __init__.py  __main__.py  core_installer.py  custom-install-finalize.3dsx  gui.py
finalize/: flake.nix
finalize/source/: main.c
